<resources>
    <string name="app_name">QuwiTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">password</string>
    <string name="e_mail">E-mail</string>
    <string name="quwi">quwi</string>
    <string name="messages">Messages</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="me">Me</string>
    <string name="this_dialog_is_empty">This dialog is empty</string>
</resources>